sass/card.scss
.card_set {
    display: inline-flex;
    align-items: center;
    flex-wrap: wrap;
    justify-content: space-around;
}

.card {
    width: calc(50% - 30px);
    padding: 10px;
}

@media screen and (max-width: 768px) {
    .static_size {
        transform-origin: top left;
        transform: scale(0.75);
    }
}

@media screen and (max-width: 1280px) {
    .card {
        width: calc(100% - 10px);
        min-width: 380px;
        padding: 10px;
    }
}

@media screen and (max-width: 768px) {
    .card {
        width: calc(100% - 20px);
        min-width: 280px;
        padding: 10px;
    }
}

